--- a/mandelbulber2/formula/ui/koch_v5.ui
+++ b/mandelbulber2/formula/ui/koch_v5.ui
@@ -1854,7 +1854,7 @@ offset:</string>
      <property name="checkable">
       <bool>true</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_36" stretch="0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_36" stretch="0,0,0,0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -2320,13 +2320,6 @@ offset:</string>
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_27">
-             <property name="text">
-              <string>size:</string>
-             </property>
-            </widget>
-           </item>
            <item row="2" column="1">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledI_false">
              <property name="enabled">
@@ -2334,54 +2327,6 @@ offset:</string>
              </property>
              <property name="text">
               <string notr="true">3D (box or sphere)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_26">
-             <property name="text">
-              <string>vert. offset:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="text">
-              <string notr="true">enable circle clip (disable square clip)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_2">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.989999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.989999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
              </property>
             </widget>
            </item>
@@ -2423,6 +2368,54 @@ offset:</string>
              </property>
             </widget>
            </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_27">
+             <property name="text">
+              <string>size:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string notr="true">enable circle clip (disable square clip)</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_2">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="prefix">
+              <string/>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="decimals">
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-99.989999999999995</double>
+             </property>
+             <property name="maximum">
+              <double>99.989999999999995</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
         </layout>
@@ -2432,6 +2425,13 @@ offset:</string>
        <widget class="QLabel" name="label_55">
         <property name="text">
          <string>tessting</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_28">
+        <property name="text">
+         <string>if iter is between start and stop then aux,dist = min(aux.dist, d)</string>
         </property>
        </widget>
       </item>
@@ -2609,7 +2609,7 @@ offset:</string>
         <item row="3" column="0">
          <widget class="QLabel" name="label_56">
           <property name="text">
-           <string>abs zc.z</string>
+           <string>negative diag fold:</string>
           </property>
          </widget>
         </item>
@@ -2644,7 +2644,7 @@ offset:</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_53">
           <property name="text">
-           <string>diagFold:</string>
+           <string>diagonal fold X&gt;Y:</string>
           </property>
          </widget>
         </item>
@@ -2736,6 +2736,13 @@ offset:</string>
           </property>
           <property name="singleStep">
            <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_58">
+          <property name="text">
+           <string>positive diag fold:</string>
           </property>
          </widget>
         </item>
